<resources>
    <string name="app_name">Pomocny sąsiad</string>
    <string name="google_maps_api_key">AIzaSyD3jjUDU4eJWy-GcumnSV59lnXGywfOXa4</string>
    <string name="choose_role">Wybierz rolę</string>
    <string name="volunteer">Wolontariusz</string>
    <string name="inNeed">Potrzebujący</string>
    <string name="title">Tytuł zgłoszenia</string>
    <string name="description">Uwagi</string>
    <string name="create">Utwórz zgłoszenie</string>
    <string name="select">Wybierz</string>
    <string name="category">Kategorie</string>
    <string name="selected_category">Wybrana kategoria: </string>
    <string name="empty_request_title">Musisz uzupełnić tytuł zgłoszenia</string>
    <string name="empty_request_description">Musisz uzupełnić opis zgłoszenia</string>
    <string name="empty_request_category">Musisz wybrać kategorie zgłoszenia</string>
    <string name="not_enough_token_to_create_request">Upss.. zabrakło Ci żetonów do utworzenia zgłoszenia</string>
    <string name="product_name">Nazwa produktu</string>
    <string name="product_amount">Ilość</string>
    <string name="shopping_list">Twoja lista zakupów:</string>
    <string name="add_product">Dodaj produkt do listy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello</string>
    <string name="offer_to_help">Zaproponuj pomoc</string>
    <string name="accept">Akceptuj</string>
    <string name="accepted">Zaakceptowano</string>
    <string name="reject">Zrezygnuj</string>
    <string name="finish">Zakończ i oceń</string>
    <string name="finished">Zakończono</string>
    <string name="send">Wyślij</string>
    <string name="assess_question">Jak oceniasz współpracę z użytkownikiem </string>
    <string name="check_account">Sprawdź profil</string>
    <string name="chatHint">Wpisz wiadomość</string>
    <string name="refresh_location">Odśwież lokalizację</string>

    <string name="writeYourOpinion">Wpisz swoją opinię</string>
    <string name="other">Inne</string>
    <string name="form">Formularz</string>
    <string name="fullname">Imię i nazwisko</string>
    <string name="set">Ustaw</string>
</resources>