<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ChatFragment"
    android:layout_marginBottom="?attr/actionBarSize">

    <TextView
        android:id="@+id/chatUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintBottom_toTopOf="@id/chatRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chatUserName"
        app:layout_constraintBottom_toTopOf="@id/chatNewMessageTIL"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/chatNewMessageTIL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/chatSendMessage"
        app:layout_constraintTop_toBottomOf="@id/chatRecycler"
        app:layout_constraintBottom_toTopOf="@id/chatAccept"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/chatNewMessageChatET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/chatSendMessage"
        app:layout_constraintStart_toEndOf="@id/chatNewMessageTIL"
        app:layout_constraintTop_toBottomOf="@id/chatRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/chatReject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_send" />

    <Button
        android:id="@+id/chatAccept"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/chatReject"
        app:layout_constraintTop_toBottomOf="@id/chatNewMessageTIL"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/accept" />

    <Button
        android:id="@+id/chatReject"
        app:layout_constraintTop_toBottomOf="@id/chatNewMessageTIL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/chatAccept"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reject" />

    <Button
        android:id="@+id/chatFinish"
        app:layout_constraintTop_toBottomOf="@id/chatNewMessageTIL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/chatAccept"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/finish" />

</androidx.constraintlayout.widget.ConstraintLayout>